Adding a tox target to freeze shub command line tool. This new target will generate a binary of the platform on which is running (windows, linux or mac). There is a pyinstaller hook to make sure all submodules of shub are included in the binary (because are loaded on runtime). Also added a shubrunner.py script to execute the cli function of the shub.tool module because pyinstaller won't support that call.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, pypy, py33, py34
+envlist = py27, pypy, py33, py34, build
 
 [testenv]
 setenv =
@@ -12,3 +12,10 @@ deps =
     scrapy
 commands =
     py.test -v {posargs:}
+
+[testenv:build]
+deps =
+    -rrequirements.txt
+    pyinstaller
+commands =
+    pyinstaller --clean -y -F -n shub --additional-hooks-dir=./freeze/hooks --icon=./freeze/spider-down.ico ./freeze/shubrunner.py
