--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,19 @@ env:
 - TOXENV=py33
 - TOXENV=py34
 - TOXENV=build
+os:
+- linux
+- osx
+matrix:
+  exclude:
+    - os: osx
+      env: TOXENV=py27
+    - os: osx
+      env: TOXENV=pypy
+    - os: osx
+      env: TOXENV=py33
+    - os: osx
+      env: TOXENV=py34
 install:
 - "./.travis-workarounds.sh"
 - pip install -U tox twine wheel
